<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.schrittzaehler.SchrittzaehlerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:textSize="20sp"
                        android:text="@string/pedometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_marginTop="8dp"
                        android:background="@color/colorBackground"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/number_of_steps"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/textview_amount_steps"
                            android:text="0"
                            android:textSize="22sp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textAlignment="textEnd"
                            android:layout_marginStart="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/type_of_step"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_pedometer_type_of_step"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="..."
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="16dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textview_pedometer_isRunning"
                            android:text="@string/pedometer_not_running"
                            android:textColor="@color/red"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_pedometer_toggle_tracking"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textview_pedometer_toggle_text"
                    android:layout_margin="16dp"
                    android:textAlignment="center"
                    android:text="@string/acitvate_pedometer"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="20sp"
                            android:text="@string/results"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="14sp"
                            android:layout_marginStart="12dp"
                            android:text="@string/of_the_last_measurement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                    <View
                        android:layout_marginTop="8dp"
                        android:background="@color/colorBackground"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:paddingTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/total_steps"
                            android:textSize="18sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/textview_results_total_steps"
                            android:text="0"
                            android:textSize="18sp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textAlignment="textEnd"
                            android:layout_marginStart="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="14sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/from_that"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/walking_steps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_walking_steps"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/jogging_steps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_jogging_steps"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/running_steps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_running_steps"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/total_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_total_distance"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/average_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_average_speed"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/average_frequency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_average_frequency"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/burned_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_burned_calories"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/moving_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/textview_results_total_moving_time"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            android:maxLines="3"
                            android:ellipsize="end"
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/facharbeit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>